[project]
name = "audio-render-pipeline-assessment"
version = "0.1.0"
description = "Take-home: MIDI → SFZ → pedalboard master mix → WAV"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.3",
    "numpy>=2.0.0",
    "pedalboard>=0.9.23",
    "pysfizz>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
